# gloperate

data/gloperate-text/shaders/: blur.frag  copy.frag  mix.frag  plain.frag  plain.vert  postprocessing.frag  ssao.frag
source/examples/: CMakeLists.txt
source/examples/example-renderers/: CMakeLists.txt  plugin.cpp
source/examples/example-renderers/logo/: Logo.cpp  Logo.h
source/examples/globjects-painters/screenaligned/: ScreenAligned.cpp
source/examples/gloperate-text-painters/: CMakeLists.txt  plugin.cpp
source/examples/gloperate-text-painters/textrendering3D/: Text3DGlyphSequenceStage.cpp  Text3DGlyphSequenceStage.h  Text3DPainter.cpp  Text3DPainter.h  Text3DPipeline.cpp  Text3DPipeline.h  Text3DPostprocessingStage.cpp  Text3DPostprocessingStage.h  Text3DRenderStage.cpp  Text3DRenderStage.h  Text3DTexturePreparationStage.cpp  Text3DTexturePreparationStage.h
source/gloperate/: CMakeLists.txt
source/gloperate-qt/include/gloperate-qt/viewer/: QtOpenGLWindow.h  QtOpenGLWindowBase.h  Viewer.h
source/gloperate-qt/source/viewer/: QtOpenGLWindow.cpp  QtOpenGLWindowBase.cpp  Viewer.cpp  Viewer.ui
source/gloperate/include/gloperate/painter/: VirtualTimeCapability.h
source/gloperate/include/gloperate/plugin/: StagePlugin.h  StagePlugin.hpp  plugin_api.h
source/gloperate/source/plugin/: StagePlugin.cpp
source/gloperate/source/primitives/: ScreenAlignedQuad.cpp
source/gloperate/source/rendering/: AbstractComponent.cpp  AbstractData.cpp  AbstractInputSlot.cpp  AbstractStage.cpp  InputSlot.cpp  Pipeline.cpp  ViewportComponent.cpp  VirtualTimeComponent.cpp
(+19 files in other folders)
